Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntegerRetinteger.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, integer> yoda
        integer ret = yoda:useForce(one, two)
        output "passed"
     end
end
