Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjIntegerRetintegerFail.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        Integer two
        two:SetValue(66)
        Yoda<Integer, Integer, integer> yoda
        boolean wrongRet = yoda(one, two)
     end
end
